# Nuke-RemoveChannels

./: .gitignore  CMakeLists.txt  README.md  RemoveChannels.sln  batchInstall.sh
RemoveChannels/: RemoveChannels.cpp  RemoveChannels.vcxproj
examples/: removeChannelsExample.v001.nk  removeChannelsExample.v001.nk.autosave
src/: CMakeLists.txt  RemoveChannels.cpp
